--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
       "ExtractImages": "components/ExtractImages.coffee",
       "ToHtml": "components/ToHtml.coffee"
     }
+  },
+  "scripts": {
+    "test": "grunt test"
   }
 }
