Show java version being used

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ before_script:
   - wget -o jar/tika-app-1.6.jar http://apache.cs.utah.edu/tika/tika-app-1.6.jar
   - sudo apt-get update -qq
   - sudo apt-get install -qq openjdk-7-jdk
+  - java -version
   - npm install -g grunt-cli
