--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "icon": "file-word-o",
     "components": {
       "ExtractImages": "components/ExtractImages.coffee",
+      "ExtractMetadata": "components/ExtractMetadata.coffee",
       "ToHtml": "components/ToHtml.coffee"
     }
   },
