--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
     "type": "git",
     "url": "git://github.com/noflo/noflo-tika.git"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "undefined/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "dependencies": {
     "noflo": "0.x >= 0.5"
   },
