--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "noflo": "1.0.0"
+    "noflo": "^1.0.0"
   },
   "devDependencies": {
-    "chai": "~4.0.0",
+    "chai": "^4.0.0",
     "coffeelint": "^2.0.7",
     "coffeescript": "^2.0.2",
-    "mocha": "~4.0.1",
+    "mocha": "^4.0.1",
     "temp": "^0.8.1"
   },
-  "keywords": [],
+  "keywords": ["noflo"],
   "noflo": {
     "icon": "file-word-o"
   },
